welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: Missing closing brace `}' assumed here
override def run(c) {
^MethodsPicture:1: error: expected start of definition
override def run(c) {
         ^